--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background: #ebe8f6;
+  background: #8f89a6;
   font-family: "Gill Sans";
 }
 
@@ -55,11 +55,19 @@ body {
   border-radius: 8px;
   padding: 10px;
   background: #e0e2f6;
-  box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
-.status:last-child {
-  margin: 0;
+.status.old {
+  opacity: 0.55;
+  background: #d4d5d9;
+  box-shadow: 2px 2px 7px 0 rgba(0, 0, 0, 0.07);
+}
+
+.status.ancient {
+  opacity: 0.4;
+  background: #d1b9b9;
+  box-shadow: none;
 }
 
 .status-text {
@@ -98,7 +106,8 @@ body {
   width: 0.6em;
   height: 0.6em;
   display: inline-block;
-  border-radius: 50%;
+  border-radius: 60%;
+  border: 1px solid rgb(0,0,0,0.7);
   margin: 0 0.3em 0 0;
 }
 
@@ -107,5 +116,6 @@ body {
 }
 
 .offline {
-  background-color: rgba(200, 200, 200);
+  background-color: #999;
+  border-radius: 0px;
 }
