Update react-earthstar, make the blank state more welcoming

--- a/src/App.css
+++ b/src/App.css
@@ -129,3 +129,13 @@ body {
 .status-unknown {
   border-radius: 33%;
 }
+
+.helper {
+  font-size: 1.2em;
+  color: white;
+  background: rebeccapurple;
+  border-radius: 8px;
+  padding: 12px;
+  margin: 1em 8px;
+  text-align: center;
+}
